<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/spacing_medium">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decimal_places"
        android:textSize="@dimen/text_large"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/decimal_places_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium">

        <RadioButton
            android:id="@+id/radio_decimal_1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/touch_target_min"
            android:text="@string/decimal_1"
            android:textSize="@dimen/text_medium" />

        <RadioButton
            android:id="@+id/radio_decimal_2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/touch_target_min"
            android:text="@string/decimal_2"
            android:textSize="@dimen/text_medium" />

        <RadioButton
            android:id="@+id/radio_decimal_3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/touch_target_min"
            android:text="@string/decimal_3"
            android:textSize="@dimen/text_medium" />

    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="@dimen/spacing_large"
        android:background="@color/grid_color" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_delete_all_history"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:text="@string/delete_all_history"
        android:textColor="@color/error" />

</LinearLayout>
